web/public/css/styles.css
.content {
    margin-top: 60px;
}

.song-index {
    float: left;
    font-weight: 700;
    min-width: 20px;
    margin-top: 10px;
    margin-right: 5px;
}

.song-thumb {
    float: left;
    margin-right: 10px;
    margin-top: 5px;
}

.song-artist-name {
    color: grey;
}

.song-title {
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    font-weight: 600;
}

.list-group.hover > .list-group-item:hover {
    background-color: #e7e7e7;
}

.fa-1-5x {
    font-size: 1.5em;
}

.song-control {
    margin-top: 10px;
}

.list-group.hover > .list-group-item:hover .hide {
    display: block !important;
}
.song-list .list-group-item:hover{
    cursor: pointer;
}
.song-filter-form{
    margin: 16px 16px 16px 0px;
}
.song-filter-search{
    padding-right:0;
}

